# mdip-backend

./: .gitignore  CONTRIBUTORS.md  Dockerfile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 1756643edec3_root_user_password.py  313a5c223435_table_index.py  352f8e72b22c_central_catalog.py  3b772a23c3d5_init.py  449357e0c022_transaction_id_as_string.py  5d04ad429a57_new_drug_indices.py  6d46a949e3f2_autogenerated.py  6d46a949e3f2_init.py  947b8ca40067_central_catalog_mapping.py  993dcd4b8b65_drug_and_drug_mapping.py  9bab4ec1d255_transactions_entities.py  c05ba0df6ca3_autogenerated.py
app/: __init__.py  config.py  health.py  main.py  views.py
app/db/: base.py  engine.py
app/db/repositories/: EntityRepository.py  TransactionRepository.py
app/db/repositories/models/: Entity.py  Transaction.py  __init__.py
app/lib/: confidential_ledger.py  file_service.py
app/lib/utils/: checksum.py  enums.py  exceptions.py
app/modules/entity/: routes.py  schemas.py  services.py
app/modules/transaction/: routes.py  schemas.py  services.py
azure/: azure-pipelines.dev.yaml  azure-pipelines.pr.yaml  azure-pipelines.yaml  inline-coverage-styles.py
docker/: dockerfile  entrypoint.sh
src/: api_main.py  main.py  taskiq_main.py
src/application/dto/: __init__.py  auth_dto.py  drug_catalog_dto.py  drug_dto.py  mapping.py  stats_dto.py  transaction.py  user_dto.py
src/application/use_cases/auth/: api_authorization.py  user_login.py  user_token_refresh.py
src/application/use_cases/drug/: get_all.py  get_all_by_country.py  get_all_drugs.py  get_by_id.py  get_paginated.py
src/application/use_cases/drug_catalog/: create.py  drug_catalog_create.py  get_by_id.py  get_drug_catalog_by_id.py  get_paginated.py  get_paginated_drug_catalog.py  import_task.py
src/application/use_cases/mapping/: create.py  import_task.py  mappings_by_drug_id.py
src/application/use_cases/stats/: get_admin_stats.py
src/application/use_cases/transaction/: get_catalog_transaction.py  get_mapping_transaction.py  verify_transaction.py
src/application/use_cases/user/: get_by_sub.py  get_user_by_sub.py
src/config/: constants.py  settings.py
src/config/settings/: __init__.py  base.py  blob.py  ledger.py
src/domain/entities/: __init__.py  drug.py  drug_catalog.py  drug_mapping.py  drug_mapping_count_view.py  ledger_transaction.py  ltransactions.py  user.py
src/domain/services/: auth_service.py
src/infrastructure/db/: base.py  engine.py
src/infrastructure/repositories/: contract.py  icatalog_transaction_repository.py  idrug_catalog_repository.py  idrug_mapping_count_repository.py  idrug_repository.py  iledger_transaction_repository.py  imapping_repository.py  imapping_transaction_repository.py  itransaction_repository.py  iuser_repository.py
src/infrastructure/services/: token_service.py
src/infrastructure/services/blob_storage/: __init__.py  azure_storage.py  disk_storage.py  old.py
src/infrastructure/services/catalog_parser/: contract.py  ieu.py
src/infrastructure/services/confidential_ledger/: __init__.py  azure_ledger.py  contract.py  iazure_ledger.py  idb_ledger.py  ifake_json_ledger.py
src/infrastructure/services/drug_parser/: contract.py  exc.py
src/infrastructure/services/drug_parser/impl/: ieu.py
src/infrastructure/services/pandas_parser/drug/: contract.py  exc.py
src/infrastructure/services/pandas_parser/mapping/: parse.py
src/infrastructure/taskiq/: broker.py  catalog_import.py  mapping_import.py
src/presentation/: view.py
src/presentation/routes/: authentication.py  drug.py  drug_catalog.py  health.py  mapping.py  stats.py  transaction.py  user.py
src/utils/: checksum.py  exc.py  file.py  helper.py
test/fixture/: conftest.py
test/fixture/repository/: ftdrug_repository.py
test/unit/domain/services/: test_auth_service.py
test/unit/infrastructure/repository/: test_icatalog_transaction_repository.py  test_idrug_catalog_repository.py  test_idrug_mapping_count_repository.py  test_idrug_repository.py  test_iledger_transaction_repository.py  test_imapping_repository.py  test_imapping_transaction_repository.py  test_itransaction_repository.py  test_iuser_repository.py
test/unit/infrastructure/services/: test_azure_ledger.py  test_iazure_ledger.py  test_parser.py  test_token_service.py
test/unit/infrastructure/services/blob_storage/: test_azure_storage.py  test_disk_storage.py
test/unit/infrastructure/services/drug_catalog_parser/: test_contract.py  test_ieu.py
test/unit/infrastructure/services/drug_pandas_parser/: test_contract.py  test_iat.py  test_ibe.py  test_ibg.py  test_ica.py  test_ica_pillcheck.py  test_icy.py  test_icz.py  test_idk.py  test_iee.py  test_ies.py  test_ieu.py  test_ifi.py  test_ifr.py  test_igr.py  test_ihr.py  test_ihu.py  test_iie.py  test_iit.py  test_ilt.py  test_ilu.py  (+11 more)
test/unit/infrastructure/taskiq/: test_catalog_import.py  test_mapping_import.py
test/unit/usecase/auth/: test_api_authorization.py  test_user_login.py  test_user_token_refresh.py
test/unit/usecase/drug/: test_get_all_drugs.py  test_get_by_id.py  test_get_paginated_drug.py
test/unit/usecase/drug_catalog/: test_drug_catalog_create.py  test_get_drug_catalog_by_id.py  test_get_paginated_drug_catalog.py  test_import_task.py
test/unit/usecase/mapping/: test_create.py  test_import_task.py  test_mappings_by_drug_id.py
test/unit/usecase/stats/: test_get_admin_stats.py
test/unit/usecase/transaction/: test_get_catalog_transaction.py  test_get_mapping_transaction.py  test_verify_transaction.py
test/unit/usecase/user/: test_get_user_by_sub.py
test/unit/utils/: test_checksum.py
(+33 files in other folders)
