[tool.poetry]
name = "sargasso-api"
package-mode = false
version = "0.1.0"
description = ""
authors = ["Luis Soares <luisedu.soares@dynaccurate.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.32" }
fastapi = "^0.112.0"
pydantic = { extras = ["email"], version = "^2.11.1" }
pydantic-settings = "^2.4.0"
uvicorn = "^0.30.5"
azure-identity = "^1.17.1"
azure-confidentialledger = "^1.1.1"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
python-multipart = "^0.0.9"
azure-storage-blob = "^12.22.0"
alembic-postgresql-enum = "^1.3.0"
snowflake-id = "^1.0.2"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
lxml = "^5.3.2"
chardet = "^5.2.0"

[tool.poetry.group.dev.dependencies]
aiosqlite = "^0.20.0"
autopep8 = "^2.3.1"
taskipy = "^1.13.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-cov = "^6.1.1"
ruff = "^0.11.5"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=src --cov-report=html --cov-report=xml"

# https://coverage.readthedocs.io/en/latest/excluding.html
[tool.coverage.report]
omit = [
    'src\main.py',
    'src\presentation\view.py',
    'src\presentation\routes\health.py',
    'src\infrastructure\db\base.py',
    'src\infrastructure\db\engine.py',
    'src\application\dto\*',
    'src\utils\exc.py',
    'src\config\*',
    'src\infrastructure\services\confidential_ledger\idb_ledger.py',
]
exclude_also = [
    'def __repr__',
    'if self.debug:',
    'if settings.DEBUG',
    'raise AssertionError',
    'raise NotImplementedError',
    'if 0:',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
    'log\.error\(',
    'log\.info\(',
    'log\.debug\(',
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
autorevision = "alembic revision --autogenerate -m 'autogenerated'"
auhead = "alembic upgrade head"
adbase = "alembic downgrade base"
pytest = "rm -r htmlcov && pytest ."
run = "uvicorn src.main:app --port 8000 --reload --log-level debug"
run-trace = "uvicorn src.main:app --port 8000 --reload --log-level trace"
